--- a/tests/walytis_auth_docker/dockerfile
+++ b/tests/walytis_auth_docker/dockerfile
@@ -6,8 +6,12 @@ RUN mkdir /opt/MultiCrypt
 COPY tests/walytis_auth_docker/MultiCrypt /opt/MultiCrypt
 RUN pip install /opt/MultiCrypt
 
+COPY tests/walytis_auth_docker/IPFS-Toolkit /opt/IPFS-Toolkit
+RUN pip install /opt/IPFS-Toolkit
 
 
+
+RUN pip install -r /opt/WalytisAuth/dev-requirements.txt
 RUN pip install /opt/WalytisAuth/
 
 # RUN pip show walytis_auth
