added cryptography methods to DidManager and  IdentityAccess

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 dynamic = ["dependencies"]
 name = "walytis_auth"
+authors = [{ name = "emendir" }]
 version = "0.0.1"
 
 [tool.setuptools.dynamic]
