--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 dynamic = ["dependencies"]
-name = "walytis_auth"
+name = "WalIdentity"
 authors = [{ name = "emendir" }]
 version = "0.0.1"
 
@@ -13,5 +13,5 @@ dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-# include = ["identity", "management"]
+include = ["walidentity", "waly_contacts"]
 namespaces = false
